# backend/src/resources/usuario/usuario.router.ts
@@ -4,10 +4,10 @@ const router = Router();
 import schemaUsuario from './usuario.schema';
 import validate from '../../middlewares/validate';
 
-router.get('/', usuarioController.index);
-router.post('/', validate(schemaUsuario), usuarioController.create);
-router.get('/:id', usuarioController.getUserById);
-router.put('/:id', validate(schemaUsuario), usuarioController.update);
-router.delete('/:id', usuarioController.remove);
+router.get('/usuario/', usuarioController.index);
+router.post('/usuario/', validate(schemaUsuario), usuarioController.create);
+router.get('/usuario/:id', usuarioController.getUserById);
+router.put('/usuario/:id', validate(schemaUsuario), usuarioController.update);
+router.delete('/usuario/:id', usuarioController.remove);
 
 export default router;
